scripts/nullaway/annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:22: error: [NullAway] @NonNull field rangeMap not initialized
	protected RangeMap<Float, Form> rangeMap;
	                                ^
    (see http://t.uber.com/nullaway )
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/FlameLogger.java:59: error: [NullAway] dereferenced expression writer is @Nullable
        	writer.println(builder);        	
        	      ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
